concepts/container-commands.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  restartPolicy: Never
  containers:
  - args:
    - /bin/sh
    - -c
    - sleep 5; ls
    image: busybox
    name: busybox1
    resources: {}
  - args:
    - /bin/sh
    - -c
    - sleep 5; echo 'Hello World'
    image: busybox
    name: busybox2
    resources: {}
  - args:
    - /bin/sh
    - -c
    - sleep 5; echo 'This is a third container'
    image: busybox
    name: busybox3
    resources: {}
  dnsPolicy: ClusterFirst
status: {}
