concepts/peristent-volume-claim-pod.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: nginx
  name: nginx
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: nginx
    spec:
      containers:
      - image: nginx
        name: nginx
        ports:
          - containerPort: 80
        resources: {}
        volumeMounts:
          - name: pv-claim
            mountPath: /usr/share/nginx/html
      volumes:
        - persistentVolumeClaim:
            claimName: custom-pvc
          name: pv-claim
status: {}
