concepts/security-context.yaml
apiVersion: v1
kind: Pod
metadata:
  name: security-context
spec:
  containers:
  - name: security-context
    image: gcr.io/google-samples/node-hello:1.0
    securityContext:
      capabilities:
        add: ["NET_ADMIN", "SYS_TIME"]
