concepts/sidecar.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: busybox
  name: busybox
spec:
  containers:
  - args:
    - /bin/sh
    - -c
    - while true; do echo 'Hi I am from Main container' >> /var/log/index.html; sleep
      5; done
    image: busybox
    name: busybox
    resources: {}
    volumeMounts:
    - name: empty
      mountPath: /var/log
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    volumeMounts:
    - name: empty
      mountPath: /usr/share/nginx/html
  dnsPolicy: ClusterFirst
  restartPolicy: Always
  volumes:
  - name: empty
    emptyDir: {}
status: {}
