concepts/volume-config-map.yaml
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    resources: {}
    volumeMounts:
      - name: cfgvolume
        mountPath: /etc/cfg
  dnsPolicy: ClusterFirst
  restartPolicy: Never
  volumes:
    - name: cfgvolume
      configMap:
       name: keyvalmap
status: {}
