concepts/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-nginx
  labels:
    app: my-nginx
spec:
  ports:
    - protocol: TCP
      port: 80
  selector:
    app: my-nginx
