concepts/volume-config-map-items.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: nginx
spec:
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    run: nginx
status:
  loadBalancer: {}
---
---
apiVersion: v1
kind: Pod
metadata:
  creationTimestamp: null
  labels:
    run: nginx
  name: nginx
spec:
  containers:
  - image: nginx
    name: nginx
    ports:
    - containerPort: 80
    resources: {}
    volumeMounts:
      - name: cfgmap
        mountPath: /etc
  dnsPolicy: ClusterFirst
  restartPolicy: Never
  volumes: 
    - configMap:
        name: env
        items:
        - key: token    
          path: cfg
      name: cfgmap
status: {}
