concepts/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: mynginx-network-policy
spec:
  podSelector:
    matchLabels:
      app: mynginx
  policyTypes: ["Ingress"]
